# ripples

./: .gitignore  CMakeLists.txt
docs/: Cymatics Simulator Project Overview.md  Cymatics Simulator Technical Overview.md  Understanding Cymatics Equations - A Step-by-Step Lesson Series.md
src/: main.cpp
